<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <EditText
            android:id="@+id/et_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/small_gap"
            android:layout_marginTop="@dimen/small_gap"
            android:layout_toStartOf="@+id/bt_save"
            android:layout_toLeftOf="@+id/bt_save"
            android:hint="@string/text_write" />

    <Button
            android:id="@+id/bt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/et_option"
            android:layout_alignParentRight="true"
            android:text="@string/text_save" />

    <Button
            android:id="@+id/bt_write_internal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/bt_read_internal"
            android:text="@string/text_write_internal" android:layout_marginBottom="80dp"/>

    <Button
            android:id="@+id/bt_read_internal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/text_read_internal" android:layout_marginBottom="83dp"/>


    <Button
            android:id="@+id/bt_write_external"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="34dp"
            android:layout_toRightOf="@id/bt_read_internal"
            android:text="@string/text_write_external" android:layout_marginBottom="84dp"/>

    <TextView
            android:id="@+id/tv_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Hello World!" />
    <Button
            android:text="READ EXTERNAL"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_read_external"
            android:layout_toRightOf="@id/bt_write_internal"
            android:layout_alignParentTop="true" android:layout_marginLeft="45dp" android:layout_marginTop="347dp"/>

</RelativeLayout>